[FIX] Increase contrast for parameter descriptions in plugin edit window so that they are visible.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/6.x@30930 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/darkroom.css
+++ b/styles/darkroom.css
@@ -1281,6 +1281,11 @@ form.wikiplugin_edit div {
 	color: #292929;
 }
 
+form.wikiplugin_edit table#plugin_params.normal div,
+form.wikiplugin_edit table#plugin_params_advanced.normal div {
+	color: #fff;
+}
+
 /** Wiki tocs **/
 .tocnav {
 	background: #474747;
